--- a/JS-01_Lazaro_Vega_Task/past-events.html
+++ b/JS-01_Lazaro_Vega_Task/past-events.html
@@ -78,52 +78,102 @@
         <div class="row row-cols-1 row-cols-lg-4 row-cols-md-2 g-4 m-0">
           <div class="col">
             <div class="card bg-dark text-white p-3">
-              <img src="./assets/Costume_Party.jpg" class="card-img-top rounded" alt="...">
-              <div class="card-body text-center">
-                <h5 class="card-title">Card title</h5>
-                <h6 class="card-subtitle mb-2 text-white">Card subtitle</h6>
+              <img src=https://i.postimg.cc/Fs03hQDt/Collectivities-Party.jpg class="card-img-top rounded" alt="...">
+              <div class="card-body text-center p-0 py-3">
+                <h5 class="card-title">Collectivities Party</h5>
+                <h6 class="card-subtitle mb-2 text-white">Enjoy your favourite dishes, from different countries, in a
+                  unique event for the whole family.</h6>
               </div>
               <div class="d-flex justify-content-between align-items-center p-2">
-                <span>Price $0000</span>
+                <span>Price $5</span>
                 <a href="./event-details.html" class="btn btn-danger">View More...</a>
               </div>
             </div>
           </div>
+
           <div class="col">
             <div class="card bg-dark text-white p-3">
-              <img src="./assets/Food_Fair.jpg" class="card-img-top rounded" alt="...">
-              <div class="card-body text-center">
-                <h5 class="card-title">Card title</h5>
-                <h6 class="card-subtitle mb-2 text-white">Card subtitle</h6>
+              <img src=https://i.postimg.cc/GmHRkbNV/Jurassic-Park.jpg class="card-img-top rounded" alt="...">
+              <div class="card-body text-center p-0 py-3">
+                <h5 class="card-title">Jurassic Park</h5>
+                <h6 class="card-subtitle mb-2 text-white">Let's go meet the biggest dinosaurs in the paleontology
+                  museum.</h6>
               </div>
               <div class="d-flex justify-content-between align-items-center p-2">
-                <span>Price $0000</span>
+                <span>Price $15</span>
                 <a href="./event-details.html" class="btn btn-danger">View More...</a>
               </div>
             </div>
           </div>
+
           <div class="col">
             <div class="card bg-dark text-white p-3">
-              <img src="./assets/Museum_Tour.jpg" class="card-img-top rounded" alt="...">
-              <div class="card-body text-center">
-                <h5 class="card-title">Card title</h5>
-                <h6 class="card-subtitle mb-2 text-white">Card subtitle</h6>
+              <img src=https://i.postimg.cc/KYD0jMf2/comicon.jpg class="card-img-top rounded" alt="...">
+              <div class="card-body text-center p-0 py-3">
+                <h5 class="card-title">Comicon</h5>
+                <h6 class="card-subtitle mb-2 text-white">For comic lovers, all your favourite characters gathered in
+                  one place.</h6>
               </div>
               <div class="d-flex justify-content-between align-items-center p-2">
-                <span>Price $0000</span>
+                <span>Price $54</span>
                 <a href="./event-details.html" class="btn btn-danger">View More...</a>
               </div>
             </div>
           </div>
+
           <div class="col">
             <div class="card bg-dark text-white p-3">
-              <img src="./assets/Music_Concert.jpg" class="card-img-top rounded" alt="...">
-              <div class="card-body text-center">
-                <h5 class="card-title">Card title</h5>
-                <h6 class="card-subtitle mb-2 text-white">Card subtitle</h6>
+              <img src=https://i.postimg.cc/KvsSK8cj/Electronic-Fest.jpg class="card-img-top rounded" alt="...">
+              <div class="card-body text-center p-0 py-3">
+                <h5 class="card-title">Electronic Fest</h5>
+                <h6 class="card-subtitle mb-2 text-white">The best national and international DJs gathered in one place.
+                </h6>
               </div>
               <div class="d-flex justify-content-between align-items-center p-2">
-                <span>Price $0000</span>
+                <span>Price $250</span>
+                <a href="./event-details.html" class="btn btn-danger">View More...</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card bg-dark text-white p-3">
+              <img src=https://i.postimg.cc/fyLqZY9K/10-K-for-life.jpg class="card-img-top rounded" alt="...">
+              <div class="card-body text-center p-0 py-3">
+                <h5 class="card-title">10K for life</h5>
+                <h6 class="card-subtitle mb-2 text-white">Come and exercise, improve your health and lifestyle.</h6>
+              </div>
+              <div class="d-flex justify-content-between align-items-center p-2">
+                <span>Price $3</span>
+                <a href="./event-details.html" class="btn btn-danger">View More...</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card bg-dark text-white p-3">
+              <img src=https://i.postimg.cc/05FhxHVK/book4.jpg class="card-img-top rounded" alt="...">
+              <div class="card-body text-center p-0 py-3">
+                <h5 class="card-title">Just for your kitchen</h5>
+                <h6 class="card-subtitle mb-2 text-white">If you're a gastronomy lover come get the cookbook that best
+                  suits your taste and your family's.</h6>
+              </div>
+              <div class="d-flex justify-content-between align-items-center p-2">
+                <span>Price $100</span>
+                <a href="./event-details.html" class="btn btn-danger">View More...</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card bg-dark text-white p-3">
+              <img src=https://i.postimg.cc/vH52y81C/cinema4.jpg class="card-img-top rounded" alt="...">
+              <div class="card-body text-center p-0 py-3">
+                <h5 class="card-title">Batman</h5>
+                <h6 class="card-subtitle mb-2 text-white">Come see Batman fight crime in Gotham City.</h6>
+              </div>
+              <div class="d-flex justify-content-between align-items-center p-2">
+                <span>Price $225</span>
                 <a href="./event-details.html" class="btn btn-danger">View More...</a>
               </div>
             </div>
@@ -149,10 +199,11 @@
       </footer>
     </main>
 
-    <script src="./main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"></script>
+    <script src="./data.js"></script>
+    <script src="./past-events.js"></script>
   </body>
 
 </html>
