--- a/JS-01_Lazaro_Vega_Task/event-details.html
+++ b/JS-01_Lazaro_Vega_Task/event-details.html
@@ -20,54 +20,33 @@
     <main class="d-flex flex-column vh-100">
       <header
         class="container-fluid bg-dark text-white d-flex flex-column flex-md-row justify-content-between align-items-center px-0 px-sm-2 py-1 border-bottom border-danger">
-        <img class="ratio ratio-21x9" style="width:15rem;" src="./assets/Logo_Amazing_Events.png"
-          alt="Amazing Events Logo">
+        <a href="./index.html">
+          <img class="ratio ratio-21x9" style="width:15rem;" src="./assets/Logo_Amazing_Events.png"
+            alt="Amazing Events Logo">
+        </a>
         <nav class="flex-grow-1">
-          <ul class="list-group list-group-horizontal justify-content-evenly flex-row flex-wrap gap-1">
-            <li class="btn btn-danger">
-              <a class="nav-link" href="./index.html">Home</a>
+          <ul class="navbar-nav list-group list-group-horizontal justify-content-evenly flex-row flex-wrap gap-1">
+            <li class="nav-item">
+              <a class="btn btn-danger" href="./index.html">Home</a>
             </li>
-            <li class="btn btn-danger">
-              <a class="nav-link" href="./upcoming-events.html">Upcoming Events</a>
+            <li class="nav-item">
+              <a class="btn btn-danger" href="./upcoming-events.html">Upcoming Events</a>
             </li>
-            <li class="btn btn-danger">
-              <a class="nav-link" href="./past-events.html">Past Events</a>
+            <li class="nav-item">
+              <a class="btn btn-danger" href="./past-events.html">Past Events</a>
             </li>
-            <li class="btn btn-danger">
-              <a class="nav-link" href="./contact.html">Contact</a>
+            <li class="nav-item">
+              <a class="btn btn-danger" href="./contact.html">Contact</a>
             </li>
-            <li class="btn btn-danger">
-              <a class="nav-link" href="./stats.html">Stats</a>
+            <li class="nav-item">
+              <a class="btn btn-danger" href="./stats.html">Stats</a>
             </li>
           </ul>
         </nav>
       </header>
-      <section id="details" class="d-flex flex-column align-items-center flex-grow-1">
-        <div class="card border-0 bg-dark m-5 p-3">
-          <div class="row justify-content-evenly gap-1 g-0">
-            <div class="col-md-5 rounded border border-danger">
-              <img style="height: 30rem;" src="./assets/Music_Concert.jpg" class="img-fluid rounded" alt="...">
-            </div>
-            <div class="col-md-5 bg-light rounded border border-danger">
-              <div class="card-body d-flex flex-column justify-content-center align-items-center gap-3 h-100">
-                <div class="d-flex justify-content-between px-3 align-items-center w-100">
-                  <h5 class="card-title fs-1">Name</h5>
-                  <p class="card-text fs-4"><small class="text-muted">Date</small></p>
-                </div>
-                <p class="card-text fs-2">Description</p>
-                <div class="d-flex justify-content-evenly w-100">
-                  <p class="card-text fs-4"><small class="text-muted">Price : $0000</small></p>
-                  <p class="card-text fs-4"><small class="text-muted">Assistence : 0000</small></p>
-                </div>
-                <div class="d-flex justify-content-evenly align-items-center w-100">
-                  <p class="card-text fs-2 border border-danger rounded px-1">Category</p>
-                  <p class="card-text fs-2 border border-primary rounded px-1">Place</p>
-                  <p class="card-text fs-2 border border-warning rounded px-1">Capacity</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+      <!-- CARD DETAILS -->
+      <section id="details" class="d-flex flex-column align-items-center justify-content-center flex-grow-1">
+        <h2>Cargando...</h2>
       </section>
       <footer class="d-flex justify-content-between align-items-center bg-danger p-3">
         <nav class="d-flex gap-2">
@@ -88,6 +67,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"></script>
+    <script src="./data.js"></script>
+    <script src="./details.js"></script>
   </body>
 
 </html>
