--- a/JS-01_Lazaro_Vega_Task/past-events.html
+++ b/JS-01_Lazaro_Vega_Task/past-events.html
@@ -20,24 +20,26 @@
     <main class="d-flex flex-column vh-100">
       <header
         class="container-fluid bg-dark text-white d-flex flex-column flex-md-row justify-content-between align-items-center px-0 px-sm-2 py-1 border-bottom border-danger">
-        <img class="ratio ratio-21x9" style="width:15rem;" src="./assets/Logo_Amazing_Events.png"
-          alt="Amazing Events Logo">
+        <a href="./index.html">
+          <img class="ratio ratio-21x9" style="width:15rem;" src="./assets/Logo_Amazing_Events.png"
+            alt="Amazing Events Logo">
+        </a>
         <nav class="flex-grow-1">
-          <ul class="list-group list-group-horizontal justify-content-evenly flex-row flex-wrap gap-1">
-            <li class="btn btn-danger">
-              <a class="nav-link" href="./index.html">Home</a>
+          <ul class="navbar-nav list-group list-group-horizontal justify-content-evenly flex-row flex-wrap gap-1">
+            <li class="nav-item">
+              <a class="btn btn-danger" href="./index.html">Home</a>
             </li>
-            <li class="btn btn-danger">
-              <a class="nav-link" href="./upcoming-events.html">Upcoming Events</a>
+            <li class="nav-item">
+              <a class="btn btn-danger" href="./upcoming-events.html">Upcoming Events</a>
             </li>
-            <li class="btn btn-danger">
-              <a class="nav-link" href="./past-events.html">Past Events</a>
+            <li class="nav-item">
+              <a class="btn btn-danger" href="./past-events.html">Past Events</a>
             </li>
-            <li class="btn btn-danger">
-              <a class="nav-link" href="./contact.html">Contact</a>
+            <li class="nav-item">
+              <a class="btn btn-danger" href="./contact.html">Contact</a>
             </li>
-            <li class="btn btn-danger">
-              <a class="nav-link" href="./stats.html">Stats</a>
+            <li class="nav-item">
+              <a class="btn btn-danger" href="./stats.html">Stats</a>
             </li>
           </ul>
         </nav>
@@ -60,6 +62,7 @@
         </div>
         <!-- CARDS -->
         <div class="row row-cols-1 row-cols-lg-4 row-cols-md-2 g-4 m-0" id="card-container">
+          <h2>Cargando...</h2>
         </div>
       </section>
       <footer class="d-flex justify-content-between align-items-center bg-danger p-3">
